<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/main_menu"
        android:title="@string/main_menu"
        android:icon="@drawable/ic_home_white_24dp"
        app:showAsAction="always"/>

    <item android:id="@+id/music_menu"
        android:title="@string/music_menu"
        android:icon="@drawable/ic_music_on_white_24dp"
        app:showAsAction="always"/>

    <item android:id="@+id/sound_menu"
        android:title="@string/sound_menu"
        android:icon="@drawable/ic_icons8_sound_on"
        app:showAsAction="always"/>

    <item android:id="@+id/vibration_menu"
        android:title="@string/vibration_menu"
        android:icon="@drawable/ic_vibration_white_on_24dp"
        app:showAsAction="always"/>


</menu>