<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/colorBlack"
    tools:context=".TutorialActivity">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        style="@style/tutorial_style"
        android:gravity="center"
        android:text="@string/game_tab_1"/>

    <TextView
        android:id="@+id/section_label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        style="@style/tutorial_style"
        android:gravity="center"
        android:text="@string/game_tab_11"
        android:layout_below="@id/section_label"/>

    <TextView
        android:id="@+id/hit_tv"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/game_tab_2"
        android:layout_marginStart="110dp"
        android:layout_marginBottom="10dp"
        style="@style/tutorial_style"
        android:gravity="center"
        android:layout_below="@id/section_label1"/>

    <ImageView
        android:id="@+id/hit_iv"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:src="@drawable/light1"
        android:layout_below="@id/section_label1"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/miss_tv"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/game_tab_3"
        android:layout_marginStart="110dp"
        style="@style/tutorial_style"
        android:gravity="center"
        android:layout_below="@id/hit_tv"/>

    <ImageView
        android:id="@+id/miss_iv"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:src="@drawable/btn_x"
        android:layout_below="@id/hit_iv"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="115dp"/>

    <TextView
        android:id="@+id/section_label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/game_tab_4"
        android:gravity="center"
        style="@style/tutorial_style"
        android:layout_below="@id/miss_tv"/>

    <TextView
        android:id="@+id/section_label3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/game_tab_41"
        android:gravity="center"
        style="@style/tutorial_style"
        android:layout_below="@id/section_label2"/>

    <LinearLayout
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/section_label3"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/game_tab_5"
            android:gravity="center"
            style="@style/tutorial_style"/>

        <ImageView
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:src="@drawable/full_ship3_b"/>

    </LinearLayout>


</RelativeLayout>