<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/final_bg1"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        app:menu="@menu/tutorial_menu"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <ImageView
        android:id="@+id/trophy"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/trofee"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"/>

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingStart="30dp"
        android:layout_below="@id/trophy">

        <TextView
            android:id="@+id/name_tv_blue"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:gravity="center"
            android:fontFamily="@font/audiowide"
            android:text="@string/name_tv"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlue4" />

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:fontFamily="@font/audiowide"
            android:text="@string/name_tv"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/time_tv_blue"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:gravity="center"
            android:fontFamily="@font/audiowide"
            android:text="@string/time_tv"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlue4"
            android:layout_toEndOf="@id/score_tv"/>

        <TextView
            android:id="@+id/time_tv"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:fontFamily="@font/audiowide"
            android:text="@string/time_tv"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:layout_toEndOf="@id/score_tv"/>

        <TextView
            android:id="@+id/score_tv_blue"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:gravity="center"
            android:fontFamily="@font/audiowide"
            android:text="@string/score_tv"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlue4"
            android:layout_toEndOf="@id/name_tv"/>

        <TextView
            android:id="@+id/score_tv"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:fontFamily="@font/audiowide"
            android:text="@string/score_tv"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:layout_toEndOf="@id/name_tv"/>


    </RelativeLayout>

    <ListView
        android:id="@+id/list_records"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_layout"
        android:layout_marginBottom="30dp">

    </ListView>

</RelativeLayout>

